# VPG

./: .gitignore  README.md  VPG.sln
autonomous-driving-simulator/: .gitignore  README.md
autonomous-driving-simulator/Assets/: UniversalRenderPipelineGlobalSettings.asset
autonomous-driving-simulator/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
python-virtual-proving-ground/: .gitignore  README.md  config.ini  pyproject.toml  scenario_creator.py  scenario_runner_background.py  scenario_runner_gui.py
python-virtual-proving-ground/environments/: driving_env.py
python-virtual-proving-ground/rl/: environment.py
python-virtual-proving-ground/scenarios/: 2car1pedestrian.json  scenario_20260322_101342.json  scenario_20260322_101440.json  scenario_20260322_101533.json  scenario_20260322_102005.json  scenario_20260322_102033.json  scenario_20260327_235429.json
python-virtual-proving-ground/scenarios/legacy/: manyCarsSameDirection.json
python-virtual-proving-ground/sim/: draw.py  entities.py  physics_engine.py  scenario_loader.py
python-virtual-proving-ground/src/: scenario_creator.py  scenario_runner_gui.py
python-virtual-proving-ground/src/sim/: entities.py  physics_engine.py  road.py  scenario.py  scenario_loader.py  simulation_state.py
python-virtual-proving-ground/tests/: test_entities.py  test_physics_engine.py  test_scenario_runner.py
virtual-proving-ground/: .gitignore  README.md  car.gd  car.gd.uid  icon.svg.import  new_orm_material_3d.tres  plug.gd  project.godot  test_scene.tscn  unt123
(+263 files in other folders)
